--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- GNB(전역 내비게이션 바) -->
+    <header class="gnb">
+      <div class="gnb-left">
+        <a href="index.html"><img src="gnb/logo3.png" alt="Logo" class="logo"></a>
+      </div>
+      <nav class="gnb-right">
+        <a href="#project"><img src="gnb/project.png" alt="Project" class="nav-icon"></a>
+        <a href="#artist"><img src="gnb/artist.png" alt="Artist" class="nav-icon"></a>
+      </nav>
+    </header>
+
     <!-- p5.js 캔버스는 sketch.js에 의해 이 body에 자동으로 추가됩니다. -->
 
     <!-- 스크롤되는 콘텐츠 영역 -->
