이미지 추가
이미지 추가

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html"><img src="gnb/logo3.png" alt="Logo" class="logo"></a>
       </div>
       <nav class="gnb-right">
-        <a href="#project"><img src="gnb/project.png" alt="Project" class="nav-icon"></a>
+        <a href="#project"><img src="gnb/projects.png" alt="Project" class="nav-icon"></a>
         <a href="#artist"><img src="gnb/artist.png" alt="Artist" class="nav-icon"></a>
       </nav>
     </header>
@@ -32,8 +32,11 @@
 
       <section class="container" id="about">
         <h2>ABOUT</h2>
-        <img src="https://picsum.photos/id/10/400/300" alt="About 이미지 예시">
-        <p>이곳에 ABOUT 섹션에 대한 설명을 작성합니다. 이 프로젝트는 p5.js를 사용하여 만들어졌으며, 인터랙티브한 배경 애니메이션이 특징입니다. 사용자의 움직임과 상호작용하여 동적인 경험을 제공합니다.</p>
+        <div class="about-images">
+          <img src="about/poster.png" alt="Poster Image">
+          <img src="about/business card.png" alt="Business Card Image">
+        </div>
+        <p>이곳에 ABOUT 섹션에 대한 설명을 작성합니다. 이 프로젝트는 p5.js를 사용하여 만들어졌으며, 인터랙티브한 배경 애니메이션이 특징입니다. 사용자의 움직임과 상호작용하여 동적인 경험을 제공합니다.</p>        
       </section>
 
       <section class="container" id="info">
