--- a/index.html
+++ b/index.html
@@ -8,17 +8,40 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <!-- 외부 CSS 파일 연결 -->
     <link rel="stylesheet" href="style.css">
+    <style>
+      /* ABOUT 섹션 레이아웃 조정 */
+      #about .about-content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 50px; /* 이미지와 텍스트 사이 간격 */
+        width: 100%;
+      }
+
+      #about .about-images {
+        flex-basis: 40%; /* 이미지 컨테이너 너비 */
+      }
+
+      #about #poster-image {
+        width: 100%; /* 부모 컨테이너에 맞춰 크기 조정 */
+        max-width: 450px; /* 최대 너비 설정 */
+        height: auto;
+        transition: transform 0.1s ease; /* 부드러운 전환 효과 */
+      }
+    </style>
   </head>
   <body>
     <!-- GNB(전역 내비게이션 바) -->
     <header class="gnb">
-      <div class="gnb-left">
-        <a href="index.html"><img src="gnb/logo3.png" alt="Logo" class="logo"></a>
+      <div class="gnb-inner">
+        <div class="gnb-left">
+          <a href="index.html"><img src="gnb/logo3.png" alt="Logo" class="logo"></a>
+        </div>
+        <nav class="gnb-right">
+          <a href="#project"><img src="gnb/projects.png" alt="Project" class="nav-icon"></a>
+          <a href="#artist"><img src="gnb/artist.png" alt="Artist" class="nav-icon"></a>
+        </nav>
       </div>
-      <nav class="gnb-right">
-        <a href="#project"><img src="gnb/projects.png" alt="Project" class="nav-icon"></a>
-        <a href="#artist"><img src="gnb/artist.png" alt="Artist" class="nav-icon"></a>
-      </nav>
     </header>
 
     <!-- p5.js 캔버스는 sketch.js에 의해 이 body에 자동으로 추가됩니다. -->
@@ -32,17 +55,65 @@
 
       <section class="container" id="about">
         <h2>ABOUT</h2>
-        <div class="about-images">
-          <img src="about/poster.png" alt="Poster Image">
-          <img src="about/business card.png" alt="Business Card Image">
+        <div class="about-content">
+          <div class="about-images">
+            <img src="about/poster.png" alt="Poster Image" id="poster-image">
+          </div>
+          <p>이곳에 ABOUT 섹션에 대한 설명을 작성합니다. 이 프로젝트는 p5.js를 사용하여 만들어졌으며, 인터랙티브한 배경 애니메이션이 특징입니다. 사용자의 움직임과 상호작용하여 동적인 경험을 제공합니다.</p>        
         </div>
-        <p>이곳에 ABOUT 섹션에 대한 설명을 작성합니다. 이 프로젝트는 p5.js를 사용하여 만들어졌으며, 인터랙티브한 배경 애니메이션이 특징입니다. 사용자의 움직임과 상호작용하여 동적인 경험을 제공합니다.</p>        
       </section>
 
       <section class="container" id="info">
         <h2>INFO</h2>
-        <p>이곳에 INFO 섹션에 대한 설명을 작성합니다. 기술 스택, 프로젝트의 목적, 연락처 등 다양한 정보를 포함할 수 있습니다. 이 예시 텍스트는 나중에 실제 내용으로 교체될 수 있습니다.</p>
-        <img src="https://picsum.photos/id/20/400/300" alt="Info 이미지 예시">
+        <!-- INFO Content (from info.html) -->
+        <div id="info-details" class="info-list-container">
+            <!-- 졸업전시위원 -->
+            <div class="info-list-item">
+                <h3 class="info-title color-indigo">졸업전시위원</h3>
+                <ul class="info-member-list">
+                    <li>장영웅</li>
+                    <li>박소현</li>
+                    <li>박성민</li>
+                </ul>
+            </div>
+
+            <!-- 웹 명단 -->
+            <div class="info-list-item">
+                <h3 class="info-title color-teal">웹</h3>
+                <ul class="info-member-list">
+                    <li>김철수</li>
+                    <li>이영희</li>
+                </ul>
+            </div>
+
+            <!-- 영상 명단 -->
+            <div class="info-list-item">
+                <h3 class="info-title color-rose">영상</h3>
+                <ul class="info-member-list">
+                    <li>박지민</li>
+                    <li>최수영</li>
+                    <li>정국</li>
+                </ul>
+            </div>
+
+            <!-- 소형배너 명단 -->
+            <div class="info-list-item">
+                <h3 class="info-title color-amber">소형배너</h3>
+                <ul class="info-member-list">
+                    <li>이하나</li>
+                    <li>강동원</li>
+                </ul>
+            </div>
+
+            <!-- 대형배너 명단 -->
+            <div class="info-list-item">
+                <h3 class="info-title color-cyan">대형배너</h3>
+                <ul class="info-member-list">
+                    <li>유재석</li>
+                    <li>송지효</li>
+                </ul>
+            </div>
+        </div>
       </section>
     </main>
 
