--- a/project.html
+++ b/project.html
@@ -358,6 +358,18 @@
                     link.classList.add("active");
                   }
                 });
+
+                // 스크롤 시 GNB에 'scrolled' 클래스 추가/제거
+                const gnb = document.querySelector('.gnb');
+                if (gnb) {
+                  window.addEventListener('scroll', () => {
+                    if (window.scrollY > 10) { // 10px 이상 스크롤되면
+                      gnb.classList.add('scrolled');
+                    } else {
+                      gnb.classList.remove('scrolled');
+                    }
+                  });
+                }
               });
 
 
