인트로 제거

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
     </main>
 
     <!-- 외부 JS 파일 연결 -->
+         <script src="intro-animation.js"></script>
     <script src="sketch.js"></script>
+
     <script>
       // GNB를 동적으로 로드하고 현재 페이지에 'active' 클래스를 추가하는 스크립트
       document.addEventListener("DOMContentLoaded", function() {
