--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Google Font (Noto Sans KR) for Main Content -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Source+Code+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Tailwind CSS CDN for Intro -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- GSAP CDN -->
@@ -19,6 +19,9 @@
     <!-- 외부 CSS 파일 연결 -->
     <link rel="stylesheet" href="gnb.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+
+    </style>
   </head>
   <body>
     <!-- Intro Animation Container -->
@@ -62,7 +65,7 @@
       <!-- 스크롤되는 콘텐츠 영역 -->
       <main>
         <!-- 각 섹션이 화면 전체를 차지하도록 하는 컨테이너 -->
-        <section class="container" id="canvas-container">
+        <section id="canvas-container">
           <!-- sketch.js가 이 안에 캔버스를 생성할 것입니다. -->
         </section>
 
@@ -72,61 +75,84 @@
           <div class="animation-wrapper">
             <div class="about-images-wrapper">
               <img class="scroll-image" src="about/poster.png" alt="Poster Image">
+
             </div>
-            <p class="fade-in-text about-text">이곳에 ABOUT 섹션에 대한 설명을 작성합니다. 이 프로젝트는 p5.js를 사용하여 만들어졌으며, 인터랙티브한 배경 애니메이션이 특징입니다. 사용자의 움직임과 상호작용하여 동적인 경험을 제공합니다.</p>
+            <!-- [수정] 텍스트 콘텐츠를 하나의 div로 그룹화 -->
+            <div class="fade-in-text about-text">
+              <!-- "Decoding/Encoding" 텍스트 블록 -->
+              <div class="about-extra-text">
+                <div>
+                  <h3>Decoding</h3>
+                  <p>세상을 읽고</p>
+                </div>
+                <div>
+                  <h3>Encoding</h3>
+                  <p>시각으로 답하다</p>
+                </div>
+              </div>
+              <!-- 설명 문단 -->
+              <div>
+                <p>세상은 수많은 이야기와 정보, 그리고 보이지 않는 문제들로 가득 찬 거대한 텍스트입니다. 저희는 그 텍스트를 읽고, 해석하고, 우리만의 언어로 새로운 의미를 만들어내는 사람들, 바로 시각 디자이너입니다.</p>
+                <p style="margin-top: 1.5em;">이번 졸업 작품은 ‘세상을 그리는 방식’에 대한 저희의 대답입니다.<br>이는 단순히 아름다운 것을 만드는 행위를 넘어, 복잡한 세상을 이해하고 그 문제에 대한 해결책을 시각적으로 제안하는 과정에 대한 이야기입니다.</p>
+              </div>
+            </div>
           </div>
         </section>
 
         <section class="container" id="info">
           <h2>INFO</h2>
           <!-- INFO Content (from info.html) -->
-          <div id="info-details" class="info-list-container">
-              <!-- 졸업전시위원 -->
-              <div class="info-list-item">
-                  <h3 class="info-title color-indigo">졸업전시위원</h3>
-                  <ul class="info-member-list">
-                      <li>장영웅</li>
-                      <li>박소현</li>
-                      <li>박성민</li>
-                  </ul>
-              </div>
+          <!-- [수정] 이미지와 명단을 감싸는 2단 레이아웃 래퍼 -->
+          <div class="info-content-wrapper">
+            <!-- 왼쪽: 이미지 공간 -->
+            <div class="info-image-wrapper">
+              <img src="Rectangle 254.png" alt="INFO Section Image" class="info-image">
+            </div>
 
-              <!-- 웹 명단 -->
-              <div class="info-list-item">
-                  <h3 class="info-title color-teal">웹</h3>
-                  <ul class="info-member-list">
-                      <li>김철수</li>
-                      <li>이영희</li>
-                  </ul>
-              </div>
+            <!-- 오른쪽: 명단 리스트 -->
+            <div id="info-details" class="info-list-container">
+              <!-- 첫 번째 섹션: 졸업전시위원 -->
+              <section class="info-section">
+                  <h3 class="info-title">졸업전시위원</h3>
+                  <div class="info-member-list">
+                      <p>김혜민</p> <p>박성민</p> <p>박성욱</p> <p>윤해주</p>
+                  </div>
+              </section>
 
-              <!-- 영상 명단 -->
-              <div class="info-list-item">
-                  <h3 class="info-title color-rose">영상</h3>
-                  <ul class="info-member-list">
-                      <li>박지민</li>
-                      <li>최수영</li>
-                      <li>정국</li>
-                  </ul>
-              </div>
-
-              <!-- 소형배너 명단 -->
-              <div class="info-list-item">
-                  <h3 class="info-title color-amber">소형배너</h3>
-                  <ul class="info-member-list">
-                      <li>이하나</li>
-                      <li>강동원</li>
-                  </ul>
-              </div>
-
-              <!-- 대형배너 명단 -->
-              <div class="info-list-item">
-                  <h3 class="info-title color-cyan">대형배너</h3>
-                  <ul class="info-member-list">
-                      <li>유재석</li>
-                      <li>송지효</li>
-                  </ul>
-              </div>
+              <!-- 두 번째 섹션: 파트별 명단 -->
+              <section class="info-section">
+                  <div class="info-grid">
+                      <!-- 웹 파트 -->
+                      <div class="info-list-item">
+                          <h3 class="info-title">웹</h3>
+                          <div class="info-member-list">
+                              <p>강민진</p> <p>박성욱</p> <p>박송희</p> <p>박시은</p> <p>장서연</p> <p>장영웅</p>
+                          </div>
+                      </div>
+                      <!-- 소형배너 파트 -->
+                      <div class="info-list-item">
+                          <h3 class="info-title">소형배너</h3>
+                          <div class="info-member-list">
+                              <p>서유정</p> <p>송예준</p> <p>이민준</p>
+                          </div>
+                      </div>
+                      <!-- 대형배너 파트 -->
+                      <div class="info-list-item">
+                          <h3 class="info-title">대형배너</h3>
+                          <div class="info-member-list">
+                              <p>권한별</p> <p>조예빈</p>
+                          </div>
+                      </div>
+                      <!-- 영상 파트 -->
+                      <div class="info-list-item">
+                          <h3 class="info-title">영상</h3>
+                          <div class="info-member-list">
+                              <p>고영인</p> <p>박소현</p> <p>이상훈</p>
+                          </div>
+                        </div>
+                  </div>
+              </section>
+            </div>
           </div>
         </section>
       </main>
