--- a/index.html
+++ b/index.html
@@ -102,20 +102,14 @@
         <section class="container" id="info">
           <h2>INFO</h2>
           <!-- INFO Content (from info.html) -->
-          <!-- [수정] 이미지와 명단을 감싸는 2단 레이아웃 래퍼 -->
-          <div class="info-content-wrapper">
-            <!-- 왼쪽: 이미지 공간 -->
-            <div class="info-image-wrapper">
-              <img src="Rectangle 254.png" alt="INFO Section Image" class="info-image">
-            </div>
-
-            <!-- 오른쪽: 명단 리스트 -->
+          <!-- 이미지 제거 후 명단 리스트만 남김 -->
+          <div>
             <div id="info-details" class="info-list-container">
               <!-- 첫 번째 섹션: 졸업전시위원 -->
               <section class="info-section">
                   <h3 class="info-title">졸업전시위원</h3>
                   <div class="info-member-list">
-                      <p>김혜민</p> <p>박성민</p> <p>박성욱</p> <p>윤해주</p>
+                      <p>김혜민</p> <p>박성욱</p> <p>박소현</p> <p>윤해주</p>
                   </div>
               </section>
 
@@ -126,7 +120,7 @@
                       <div class="info-list-item">
                           <h3 class="info-title">웹</h3>
                           <div class="info-member-list">
-                              <p>강민진</p> <p>박성욱</p> <p>박송희</p> <p>박시은</p> <p>장서연</p> <p>장영웅</p>
+                              <p>강민진</p> <p>박송희</p> <p>박시은</p> <p>장서연</p> <p>장영웅</p>
                           </div>
                       </div>
                       <!-- 소형배너 파트 -->
@@ -147,7 +141,7 @@
                       <div class="info-list-item">
                           <h3 class="info-title">영상</h3>
                           <div class="info-member-list">
-                              <p>고영인</p> <p>박소현</p> <p>이상훈</p>
+                              <p>고영인</p> <p>박성민</p> <p>이상훈</p>
                           </div>
                         </div>
                   </div>
