--- a/index.html
+++ b/index.html
@@ -70,84 +70,85 @@
         </section>
 
         <section class="container" id="about">
-          <h2>ABOUT</h2>
-          <!-- GSAP 스크롤 애니메이션을 위한 구조 -->
+          <!-- [수정] GSAP 스크롤 애니메이션을 위한 구조 복원 -->
           <div class="animation-wrapper">
-            <div class="about-images-wrapper">
-              <img class="scroll-image" src="about/poster.png" alt="Poster Image">
-
-            </div>
-            <!-- [수정] 텍스트 콘텐츠를 하나의 div로 그룹화 -->
-            <div class="fade-in-text about-text">
-              <!-- "Decoding/Encoding" 텍스트 블록 -->
-              <div class="about-extra-text">
-                <div>
-                  <h3>Decoding</h3>
-                  <p>세상을 읽고</p>
-                </div>
-                <div>
-                  <h3>Encoding</h3>
-                  <p>시각으로 답하다</p>
-                </div>
+            <div class="about-content-inner">
+              <div class="about-images-wrapper">
+                <h2>ABOUT</h2>
+                <img class="scroll-image" src="about/poster.png" alt="Poster Image">
               </div>
-              <!-- 설명 문단 -->
-              <div>
-                <p>세상은 수많은 이야기와 정보, 그리고 보이지 않는 문제들로 가득 찬 거대한 텍스트입니다. 저희는 그 텍스트를 읽고, 해석하고, 우리만의 언어로 새로운 의미를 만들어내는 사람들, 바로 시각 디자이너입니다.</p>
-                <p style="margin-top: 1.5em;">이번 졸업 작품은 ‘세상을 그리는 방식’에 대한 저희의 대답입니다.<br>이는 단순히 아름다운 것을 만드는 행위를 넘어, 복잡한 세상을 이해하고 그 문제에 대한 해결책을 시각적으로 제안하는 과정에 대한 이야기입니다.</p>
+              <!-- 텍스트 콘텐츠를 하나의 div로 그룹화 -->
+              <div class="fade-in-text about-text">
+                <!-- "Decoding/Encoding" 텍스트 블록 -->
+                <div class="about-extra-text">
+                  <div>
+                    <h3>Decoding</h3>
+                    <p>세상을 읽고</p>
+                  </div>
+                  <div>
+                    <h3>Encoding</h3>
+                    <p>시각으로 답하다</p>
+                  </div>
+                </div>
+                <!-- 설명 문단 -->
+                <div>
+                  <p>세상은 수많은 이야기와 정보, 그리고 보이지 않는 문제들로 가득 찬 거대한 텍스트입니다. 저희는 그 텍스트를 읽고, 해석하고, 우리만의 언어로 새로운 의미를 만들어내는 사람들, 바로 시각 디자이너입니다.</p>
+                  <p style="margin-top: 1.5em;">이번 졸업 작품은 ‘세상을 그리는 방식’에 대한 저희의 대답입니다.<br>이는 단순히 아름다운 것을 만드는 행위를 넘어, 복잡한 세상을 이해하고 그 문제에 대한 해결책을 시각적으로 제안하는 과정에 대한 이야기입니다.</p>
+                </div>
               </div>
             </div>
           </div>
         </section>
 
-        <section class="container" id="info">
-          <h2>INFO</h2>
-          <!-- INFO Content (from info.html) -->
-          <!-- [수정] 불필요한 div를 제거하고 info-list-container를 섹션의 자식으로 만듭니다. -->
-          <div id="info-details" class="info-list-container">
-            <!-- 첫 번째 섹션: 졸업전시위원 -->
-            <section class="info-section">
-                <h3 class="info-title">졸업전시위원</h3>
-                <div class="info-member-list">
-                    <p>김혜민</p> <p>박성욱</p> <p>박소현</p> <p>윤해주</p>
-                </div>
-            </section>
 
-            <!-- 두 번째 섹션: 파트별 명단 -->
-            <section class="info-section">
-                <div class="info-grid">
-                    <!-- 웹 파트 -->
-                    <div class="info-list-item">
-                        <h3 class="info-title">웹</h3>
-                        <div class="info-member-list">
-                            <p>강민진</p> <p>박송희</p> <p>박시은</p> <p>장서연</p> <p>장영웅</p>
-                        </div>
-                    </div>
-                    <!-- 소형배너 파트 -->
-                    <div class="info-list-item">
-                        <h3 class="info-title">소형배너</h3>
-                        <div class="info-member-list">
-                            <p>서유정</p> <p>송예준</p> <p>이민준</p>
-                        </div>
-                    </div>
-                    <!-- 대형배너 파트 -->
-                    <div class="info-list-item">
-                        <h3 class="info-title">대형배너</h3>
-                        <div class="info-member-list">
-                            <p>권한별</p> <p>조예빈</p>
-                        </div>
-                    </div>
-                    <!-- 영상 파트 -->
-                    <div class="info-list-item">
-                        <h3 class="info-title">영상</h3>
-                        <div class="info-member-list">
-                            <p>고영인</p> <p>박성민</p> <p>이상훈</p>
-                        </div>
-                    </div>
+        <section class="container" id="info">
+          <!-- [수정] INFO 섹션 구조를 이전 방식으로 복원 -->
+          <div id="info-details" class="info-container">
+            <h2>INFO</h2>
+            <!-- 졸업전시위원 섹션 -->
+            <div class="info-committee-section">
+              <h3 class="info-title">졸업전시위원</h3>
+              <div class="info-member-list">
+                <p>김혜민</p> <p>박성욱</p> <p>박소현</p> <p>윤해주</p>
+              </div>
+            </div>
+
+            <!-- 파트별 명단 그리드 -->
+            <div class="info-grid">
+              <!-- 웹 파트 -->
+              <div class="info-list-item">
+                <h3 class="info-title">웹</h3>
+                <div class="info-member-list">
+                  <p>강민진</p> <p>박송희</p> <p>박시은</p> <p>장서연</p> <p>장영웅</p>
                 </div>
-            </section>
+              </div>
+              <!-- 소형배너 파트 -->
+              <div class="info-list-item">
+                <h3 class="info-title">소형배너</h3>
+                <div class="info-member-list">
+                  <p>서유정</p> <p>송예준</p> <p>이민준</p>
+                </div>
+              </div>
+              <!-- 대형배너 파트 -->
+              <div class="info-list-item">
+                <h3 class="info-title">대형배너</h3>
+                <div class="info-member-list">
+                  <p>권한별</p> <p>조예빈</p>
+                </div>
+              </div>
+              <!-- 영상 파트 -->
+              <div class="info-list-item">
+                <h3 class="info-title">영상</h3>
+                <div class="info-member-list">
+                  <p>고영인</p> <p>박성민</p> <p>이상훈</p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
+
+
     </div>
 
     <!-- 외부 JS 파일 연결 -->
@@ -202,39 +203,19 @@
         // GSAP에 ScrollTrigger 플러그인 등록
         gsap.registerPlugin(ScrollTrigger);
 
-        // [수정] ABOUT 섹션 펼침 효과 애니메이션
-        let tl = gsap.timeline({
-            scrollTrigger: {
-                trigger: "#about", // ABOUT 섹션을 기준으로
-                start: "top top", 
-                end: "+=3000px", // [수정] 애니메이션 길이를 3000px로 늘려 INFO 섹션과 겹치지 않도록 함
-                pin: true, // #about 섹션 전체를 고정 (true는 trigger 요소를 고정하라는 의미)
-                scrub: 1, // 스크롤과 애니메이션을 부드럽게 동기화
-                // markers: true, // 디버깅용 마커 (필요시 주석 해제)
-                // [수정] 스크롤 트리거 영역에 들어올 때만 #about 섹션을 보이게 처리
-                onEnter: () => gsap.to("#about", {visibility: 'visible'}),
-                onLeaveBack: () => gsap.to("#about", {visibility: 'hidden'})
-            }
+        // [수정] 포스터 이미지에만 스크롤 애니메이션 적용
+        gsap.to(".scroll-image", {
+          opacity: 1,
+          y: 0, // transform: translateY(0)
+          duration: 1,
+          ease: "power2.out",
+          scrollTrigger: {
+            trigger: ".scroll-image", // 이미지를 기준으로
+            start: "top 80%", // 이미지가 뷰포트 80% 지점에 닿을 때 시작
+            toggleActions: "play none none none", // 한 번만 실행
+            // markers: true, // 디버깅용 마커
+          }
         });
-
-        // 1단계: "얇은 세로선" -> "긴 세로선" (세로로 길어짐)
-        tl.to(".animation-wrapper", {
-            height: "80vh",
-            ease: "none"
-        })
-        // 2단계: "긴 세로선" -> "펼쳐진 상자" (가로로 넓어짐)
-        .to(".animation-wrapper", {
-            width: "100%",
-            backgroundColor: "transparent", // 펼쳐진 후 배경색 투명하게
-            overflow: "visible", // 펼쳐진 후 내부 콘텐츠가 보이도록 설정
-            ease: "power1.inOut"
-        })
-        // 3단계: 이미지와 텍스트 나타나기
-        .to([".scroll-image", ".fade-in-text"], {
-            opacity: 1,
-            stagger: 0.2, // 이미지, 텍스트 순으로 0.2초 간격으로 나타남
-            ease: "power1.inOut"
-        }, "-=0.5"); // 2단계 애니메이션이 끝나기 0.5초 전에 시작
 
         // [수정] 모든 ScrollTrigger 인스턴스를 새로고침하여 위치를 재계산합니다.
         ScrollTrigger.refresh();
